<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_ffffff"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/CC"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_44">
                <ImageView
                    android:id="@+id/iv_back_activity_basepersoninfo"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:padding="@dimen/dp_3"
                    android:visibility="gone"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_17"
                    android:src="@mipmap/fh" />

                <TextView
                    android:id="@+id/tv_title_activity_baseperson"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/login_text_titlename"
                    android:visibility="gone"
                    android:textColor="@color/c_ff383838"
                    android:textSize="@dimen/sp_16"
                    />
                <TextView
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp_20"
                    android:layout_centerVertical="true"
                    android:id="@+id/tv_small_title_layout_head"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="保存"
                    android:textColor="@color/c_ff383838"
                    android:textSize="@dimen/sp_14" />
            </RelativeLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dp_72"
                    android:layout_height="@dimen/dp_72"
                    android:layout_marginTop="@dimen/dp_82"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/logo"/>
                <EditText
                    android:id="@+id/login_inputeditext_phone"
                    android:layout_width="@dimen/dp_280"
                    android:layout_height="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_62"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/login_hint_phone"
                    android:padding="@dimen/dp_10"
                    android:inputType="number"
                    android:textColor="@color/c_383838"
                    android:textColorHint="@color/c_ff565656"
                    android:textSize="@dimen/sp_12"
                    android:background="@drawable/login_input_back"/>


                <LinearLayout

                    android:layout_width="@dimen/dp_280"
                    android:layout_height="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_25"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/dp_10"
                    android:background="@drawable/login_input_back"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/login_inoputeditext_code"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/login_hint_code"
                        android:textSize="@dimen/sp_14"
                        android:textColor="@color/c_383838"
                        android:textColorHint="@color/c_ff565656"/>


                    <TextView

                        android:id="@+id/login_text_getcode"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/login_but_getcode"
                        android:gravity="center"
                        android:textColor="@color/c_e94950"
                        android:textSize="@dimen/sp_14"/>
                </LinearLayout>




                <Button
                    android:id="@+id/login_button_reture"
                    android:layout_width="@dimen/dp_280"
                    android:layout_height="@dimen/dp_44"
                    android:layout_marginTop="@dimen/dp_55"
                    android:background="@drawable/login_but"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/c_ffffff"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:layout_marginRight="@dimen/dp_5"
                    android:textSize="@dimen/sp_18"
                    android:text="@string/login_but_login"/>





            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="top">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_text_otherlogin"
                    android:textSize="@dimen/sp_12"
                    android:layout_marginTop="@dimen/dp_45"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/c_a6a6a6"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/dp_20">
                    <ImageView
                        android:id="@+id/login_image_qq"
                        android:layout_width="@dimen/dp_50"
                        android:layout_height="@dimen/dp_50"
                        android:layout_marginRight="35dp"
                        android:src="@mipmap/qq"/>

                    <ImageView
                        android:id="@+id/login_image_wechart"
                        android:layout_width="@dimen/dp_50"
                        android:layout_height="@dimen/dp_50"
                        android:src="@mipmap/wechat"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/login_text_useragremeet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_40"
                    android:textSize="12sp"
                    android:textColor="@color/c_6ca2ff"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login_text_bottom"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
