<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/c_ffffff"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"
            android:layout_marginTop="@dimen/dp_123"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/c_ff333333"
            android:textSize="@dimen/sp_16"
            android:typeface="normal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_20"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp_14"
            android:textColor="@color/c_ff808080"
            android:text="@string/choice_language_choicetext"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_98"/>




        <TextView
            android:id="@+id/chunaese"
            android:layout_width="@dimen/dp_280"
            android:layout_height="@dimen/dp_49"
            android:background="@drawable/choice_language_chinese"
            android:padding="5dp"
            android:layout_marginTop="@dimen/dp_33"
            android:text="中文"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/c_383838"/>


        <TextView
            android:id="@+id/zangwen"
            android:layout_width="@dimen/dp_280"
            android:layout_height="@dimen/dp_49"
            android:background="@drawable/choice_language_chinese"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_16"
            android:padding="5dp"
            android:text="བོད་ཡིག།"
            android:gravity="center"
            android:textColor="@color/c_383838"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="bottom">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_language_choicebottom_text"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/c_88000000"
                android:layout_marginBottom="@dimen/dp_40"/>
        </LinearLayout>



    </LinearLayout>


</LinearLayout>
